--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -101,7 +101,7 @@ $medium: 992px !default;
 // $medium-wide: 900px !default;
 $large: 1024px !default;
 $x-large: 1600px !default;
-$max-width: $large !default;
+$max-width: 1200px !default;
 
 /*
    Grid
