--- a/src/_sass/imports/minimal-mistakes/_masthead.scss
+++ b/src/_sass/imports/minimal-mistakes/_masthead.scss
@@ -38,6 +38,19 @@
   max-height: 2rem;
 }
 
+label[for='site-toc'] {
+  font-size: 1.25em;
+  border-radius: 8px;
+  margin-inline: .5em;
+  margin-bottom: 0;
+  padding-inline: .5em;
+}
+
+label[for='site-toc']:hover {
+  background: var(--ui-background-hover);
+}
+
+
 .greedy-nav a.site-title {
   display: flex;
   align-self: center;
