--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -42,6 +42,8 @@
     max-width: 840px;
     width: 100%;
     margin: 0 8px 0 0 ;
+
+    // font-family: var(--monospace-font-family);
     
     // @include breakpoint($large) {
     //   float: right;
