--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -98,7 +98,7 @@ section.page__content h5 {
   padding: 1em;
   font-size: 2em;
   font-weight: 700;
-  font-family: var(--ui);
+  font-family: var(--ui-font-family);
   border-radius: 8px;
   border: 1px solid var(--callout-border-color);
   background: var(--callout-background);
