--- a/src/_includes/nav_list.liquid
+++ b/src/_includes/nav_list.liquid
@@ -3,15 +3,15 @@
     <h3 class="nav__title" style="padding-left: 0;">{{ sidebar.title }}</h3>
   {% endif %}
   <input
-    id=ac-toc
-    name=accordion-toc
-    type=checkbox />
-  <label for=ac-toc>Table of Content<svg
-      aria-hidden=true
-      focusable=false
+    id="ac-toc"
+    name="accordion-toc"
+    type="checkbox" />
+  <label for="ac-toc">Table of Content<svg
+      aria-hidden="true"
+      focusable="false"
       role="img"
       xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 448 512"><path fill=currentColor d="M432.6 209.3l-191.1 183.1C235.1 397.8 229.1 400 224 400s-11.97-2.219-16.59-6.688L15.41 209.3C5.814 200.2 5.502 184.1 14.69 175.4c9.125-9.625 24.38-9.938 33.91-.7187L224 342.8l175.4-168c9.5-9.219 24.78-8.906 33.91 .7187C442.5 184.1 442.2 200.2 432.6 209.3z" /></svg>
+      viewBox="0 0 448 512"><path fill="currentColor" d="M432.6 209.3l-191.1 183.1C235.1 397.8 229.1 400 224 400s-11.97-2.219-16.59-6.688L15.41 209.3C5.814 200.2 5.502 184.1 14.69 175.4c9.125-9.625 24.38-9.938 33.91-.7187L224 342.8l175.4-168c9.5-9.219 24.78-8.906 33.91 .7187C442.5 184.1 442.2 200.2 432.6 209.3z" /></svg>
   </label>
 
   <ul class="nav__items">
@@ -63,7 +63,7 @@
                 <li>
                   <a
                     href="{{ child_url }}"
-                    data-url={{page.url}}
+                    data-url="{{page.url}}"
                     class="{{ active }}">
                     {% if child.icon %}
                       <svg class="nav__icon">
@@ -95,6 +95,8 @@
         el = el.parentElement;
       
 
+
+
       return el;
     }
 
@@ -107,6 +109,7 @@
       if (section) 
         section.classList.add('active');
       
+
 
 
       sidebar.scrollTo(0, activeItem.offsetTop - sidebar.clientHeight + 100)
@@ -122,11 +125,15 @@
             section.classList.add('active');
           
 
+
+
         }
       })
 
 
+
     
+
 
 
 // });
