doc: visual tweaks

--- a/src/_sass/imports/code-theme.scss
+++ b/src/_sass/imports/code-theme.scss
@@ -71,8 +71,9 @@ $base-green: $base0b;
 .hljs-comment {
     color: var(--base-04, $base04);
 }
-/* for name of functions */
-.hljs-title {
+
+/* Function (JS) and tag (HTML) names */
+.hljs-tag, .hljs-title {
     color: var(--base-0a, $base0a);
 }
 
@@ -80,7 +81,6 @@ $base-green: $base0b;
 /* Tomorrow Red */
 .hljs-variable,
 .hljs-attribute,
-.hljs-tag,
 .hljs-regexp,
 .ruby .hljs-constant,
 .xml .hljs-tag .hljs-title,
@@ -92,6 +92,7 @@ $base-green: $base0b;
 .css .hljs-pseudo {
     color: var(--base-0c, $base0c);
 }
+
 
 /* Tomorrow Orange */
 .hljs-number,
@@ -198,7 +199,7 @@ $base-green: $base0b;
 .cm-s-tomorrow-night span.cm-atom { color: var(--base-0e, $base0e); }
 .cm-s-tomorrow-night span.cm-number { color: var(--base-0e, $base0e); }
 
-.cm-s-tomorrow-night span.cm-property, .cm-s-tomorrow-night span.cm-attribute { color: var(--base-0b, $base0b); }
+.cm-s-tomorrow-night span.cm-property, .cm-s-tomorrow-night span.cm-attribute { color: var(--base-0a, $base0a); }
 .cm-s-tomorrow-night span.cm-keyword { color: var(--base-0c, $base0c); }
 .cm-s-tomorrow-night span.cm-string { color: var(--base-0a, $base0a); }
 
@@ -206,7 +207,7 @@ $base-green: $base0b;
 .cm-s-tomorrow-night span.cm-variable-2 { color: var(--base-0d, $base0d); }
 .cm-s-tomorrow-night span.cm-def { color: var(--base-09, $base09); }
 .cm-s-tomorrow-night span.cm-bracket { color: var(--base-05, $base05); }
-.cm-s-tomorrow-night span.cm-tag { color: var(--base-0c, $base0c); }
+.cm-s-tomorrow-night span.cm-tag { color: var(--base-0a, $base0a); }
 .cm-s-tomorrow-night span.cm-link { color: var(--base-0e, $base0e); }
 .cm-s-tomorrow-night span.cm-error { background: var(--base-0c, $base0c); color: var(--base-03, $base03); }
 
