--- a/src/_sass/imports/code-theme.scss
+++ b/src/_sass/imports/code-theme.scss
@@ -184,39 +184,41 @@ $base-green: $base0b;
     font-weight: bold;
 }
 
+// Styling for Code Playground is done inside the component
+// .cm-s-tomorrow-night.CodeMirror { background: var(--console-background); color: var(--base-05, $base05); }
 
-.cm-s-tomorrow-night.CodeMirror { background: var(--base-00, $base00); color: var(--base-05, $base05); }
-.cm-s-tomorrow-night div.CodeMirror-selected { background: var(--base-01, $base01); }
-.cm-s-tomorrow-night .CodeMirror-line::selection, .cm-s-tomorrow-night .CodeMirror-line > span::selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::selection { background: var(--semantic-blue, #0066ce); }
-.cm-s-tomorrow-night .CodeMirror-line::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::-moz-selection { background: var(--semantic-blue, #0066ce); }
-.cm-s-tomorrow-night .CodeMirror-gutters { background: var(--base-00, $base00); border-right: 0px; }
-.cm-s-tomorrow-night .CodeMirror-guttermarker { color: var(--base-0c, $base0c); }
-.cm-s-tomorrow-night .CodeMirror-guttermarker-subtle { color: var(--base-03, $base03); }
-.cm-s-tomorrow-night .CodeMirror-linenumber { color: var(--base-04, $base04); }
-.cm-s-tomorrow-night .CodeMirror-cursor { border-left: 1px solid var(--base-0d, $base0d); }
 
-.cm-s-tomorrow-night span.cm-comment { color: var(--base-09, $base09); }
-.cm-s-tomorrow-night span.cm-atom { color: var(--base-0e, $base0e); }
-.cm-s-tomorrow-night span.cm-number { color: var(--base-0e, $base0e); }
+// .cm-s-tomorrow-night div.CodeMirror-selected { background: var(--base-01, $base01); }
+// .cm-s-tomorrow-night .CodeMirror-line::selection, .cm-s-tomorrow-night .CodeMirror-line > span::selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::selection { background: var(--semantic-blue, #0066ce); }
+// .cm-s-tomorrow-night .CodeMirror-line::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::-moz-selection { background: var(--semantic-blue, #0066ce); }
+// .cm-s-tomorrow-night .CodeMirror-gutters { background: var(--base-00, $base00); border-right: 0px; }
+// .cm-s-tomorrow-night .CodeMirror-guttermarker { color: var(--base-0c, $base0c); }
+// .cm-s-tomorrow-night .CodeMirror-guttermarker-subtle { color: var(--base-03, $base03); }
+// .cm-s-tomorrow-night .CodeMirror-linenumber { color: var(--base-04, $base04); }
+// .cm-s-tomorrow-night .CodeMirror-cursor { border-left: 1px solid var(--base-0d, $base0d); }
 
-.cm-s-tomorrow-night span.cm-property, .cm-s-tomorrow-night span.cm-attribute { color: var(--base-0a, $base0a); }
-.cm-s-tomorrow-night span.cm-keyword { color: var(--base-0c, $base0c); }
-.cm-s-tomorrow-night span.cm-string { color: var(--base-0a, $base0a); }
+// .cm-s-tomorrow-night span.cm-comment { color: var(--base-09, $base09); }
+// .cm-s-tomorrow-night span.cm-atom { color: var(--base-0e, $base0e); }
+// .cm-s-tomorrow-night span.cm-number { color: var(--base-0e, $base0e); }
 
-.cm-s-tomorrow-night span.cm-variable { color: var(--base-0b, $base0b); }
-.cm-s-tomorrow-night span.cm-variable-2 { color: var(--base-0d, $base0d); }
-.cm-s-tomorrow-night span.cm-def { color: var(--base-09, $base09); }
-.cm-s-tomorrow-night span.cm-bracket { color: var(--base-05, $base05); }
-.cm-s-tomorrow-night span.cm-tag { color: var(--base-0a, $base0a); }
-.cm-s-tomorrow-night span.cm-link { color: var(--base-0e, $base0e); }
-.cm-s-tomorrow-night span.cm-error { background: var(--base-0c, $base0c); color: var(--base-03, $base03); }
+// .cm-s-tomorrow-night span.cm-property, .cm-s-tomorrow-night span.cm-attribute { color: var(--base-0a, $base0a); }
+// .cm-s-tomorrow-night span.cm-keyword { color: var(--base-0c, $base0c); }
+// .cm-s-tomorrow-night span.cm-string { color: var(--base-0a, $base0a); }
 
-.cm-s-tomorrow-night .CodeMirror-activeline-background { background: var(--base-02, $base02); }
-.cm-s-tomorrow-night .CodeMirror-matchingbracket { text-decoration: underline; color: white !important; }
+// .cm-s-tomorrow-night span.cm-variable { color: var(--base-0b, $base0b); }
+// .cm-s-tomorrow-night span.cm-variable-2 { color: var(--base-0d, $base0d); }
+// .cm-s-tomorrow-night span.cm-def { color: var(--base-09, $base09); }
+// .cm-s-tomorrow-night span.cm-bracket { color: var(--base-05, $base05); }
+// .cm-s-tomorrow-night span.cm-tag { color: var(--base-0a, $base0a); }
+// .cm-s-tomorrow-night span.cm-link { color: var(--base-0e, $base0e); }
+// .cm-s-tomorrow-night span.cm-error { background: var(--base-0c, $base0c); color: var(--base-03, $base03); }
+
+// .cm-s-tomorrow-night .CodeMirror-activeline-background { background: var(--base-02, $base02); }
+// .cm-s-tomorrow-night .CodeMirror-matchingbracket { text-decoration: underline; color: white !important; }
 
 
 code-playground {
-  font-size: 14px;
+  font-size: 1em;
 }
 
 
@@ -231,6 +233,49 @@ code-playground::part(editor):focus-within {
 }
 
 code-playground::part(editor) {
+  position: relative;
   border: 3px solid transparent;
-  --base-00: #1e4380;
+  --base-00: var(--console-background, var(--blue-900));
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0%, transparent 50%, rgba(0, 0, 0, 0.4) 100%);
+  color: var(--console-color) !important;
+
+  text-shadow: 0 0 5px #C8C8C870;
+  box-shadow: inset 1px 1px 15px #000;
+  border-radius: 8px;
+
+  font-size: 1.1rem;
+  line-height: 1.4;
 }
+
+
+code-playground::part(console) {
+  position: relative;
+  --base-00: var(--console-background, var(--blue-900));
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0%, transparent 50%, rgba(0, 0, 0, 0.4) 100%);
+}
+
+
+code-playground::part(editor), 
+code-playground::part(console) {
+  --selection-background: var(--semantic-blue, #0066ce);
+  --selection-color: var(--semantic-orange);
+}
+
+code-playground::part(editor)::after,
+code-playground::part(console)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+    0deg,
+    rgba(black, 0.10),
+    rgba(black, 0.10) 1px,
+    transparent 1px,
+    transparent 2px
+  );
+  pointer-events: none;
+}
+
