--- a/src/_sass/imports/minimal-mistakes/_mixins.scss
+++ b/src/_sass/imports/minimal-mistakes/_mixins.scss
@@ -65,7 +65,9 @@
   $green: green($color);
   $blue: blue($color);
 
-  $yiq: (($red*299)+($green*587)+($blue*114))/1000;
+  // $yiq: (($red*299)+($green*587)+($blue*114))/1000;
+  $yiq: (($red * 299) + ($green * 587) + ($blue * 114)) * 0.0001;
+
 
   @if $yiq-debug { @debug $yiq, $threshold; }
 
