--- a/src/_sass/imports/minimal-mistakes/_notices.scss
+++ b/src/_sass/imports/minimal-mistakes/_notices.scss
@@ -2,6 +2,8 @@
    NOTICE TEXT BLOCKS
    ========================================================================== */
 
+@import "../common.scss";
+
 /**
  *  Default Kramdown usage (no indents!):
  *  <div class="notice" markdown="1">
