--- a/src/_sass/imports/minimal-mistakes/_syntax.scss
+++ b/src/_sass/imports/minimal-mistakes/_syntax.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    Syntax highlighting
    ========================================================================== */
+@import '../code-theme';
 
 div.highlighter-rouge,
 figure.highlight {
