--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -453,13 +453,13 @@
 }
 
 @include breakpoint(max-width $small - 1px) {
-  .nav__list input:checked ~ {
+  .nav__list input:checked {
     margin: 0;
     margin-top: 68px; // Height of the circular menu
-    li {
+    ~ li {
       padding: 0 0 0.25em 0;
     }
-    .nav__items .nav__section ul {
+    ~ .nav__items .nav__section ul {
       column-count: 1;
     }
   }
