--- a/src/_sass/wide.scss
+++ b/src/_sass/wide.scss
@@ -96,18 +96,20 @@
 
 .hero-section h1 {
     font: 900 96px/104px var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
     margin: 0;
     padding: 0;
 }
 
 .hero-section h1 em {
-    font-weight: 200;
+    font-weight: 400;
     font-style: normal;
 }
 
 .hero-section p {
     max-width: 653px;
     font: 400 48px/52px var(--body-font-family);
+    font-feature-settings: var(--body-font-settings);
     letter-spacing: -0.05ex;
     margin: 0;
     padding: 0;
@@ -173,6 +175,7 @@ div.figure + div.copy {
 section.fullwidth h2 {
     color: var(--text-color);
     font: 700 56px/50px var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
     margin: 0;
     padding: 0;
     padding-bottom: 0.5em;
@@ -181,6 +184,7 @@ section.fullwidth h2 {
     & .eyebrow {
         display: block;
         font: 700 21px/1.14048 var(--display-font-family);
+        font-feature-settings: var(--display-font-settings);
         margin: 0;
         padding: 0;
         opacity: 1;
@@ -190,6 +194,7 @@ section.fullwidth h2 {
     & .subhead {
       display: block;
       font: 500 24px/1 var(--display-font-family);
+      font-feature-settings: var(--display-font-settings);
       margin: 0;
       padding: 0;
       margin-bottom: 0.5em;
@@ -200,6 +205,7 @@ section.fullwidth h2 {
 
 section.fullwidth p {
     font: 400 21px/29px var(--body-font-family);
+    font-feature-settings: var(--body-font-settings);
     margin: 0;
     padding: 0;
 }
@@ -235,6 +241,7 @@ section.fullwidth.light-card {
     & .subhead {
       display: block;
       font: 600 28px/1 var(--display-font-family);
+      font-feature-settings: var(--display-font-settings);
       margin: 0;
       padding: 0;
       opacity: .5;
@@ -336,23 +343,27 @@ section.fullwidth.light-card {
 .cards.col2 h2,
 .cards.col3 h2 {
     font: 700 48px/38px var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
     letter-spacing: -0.7px;
 }
 .cards.col2 h2 .subhead,
 .cards.col3 h2 .subhead {
   margin-top: .5em;
   font: 500 24px/1 var(--display-font-family);
+  font-feature-settings: var(--display-font-settings);
   letter-spacing: -0.2px;
 }
 
 .cards.col2 h2 .eyebrow,
 .cards.col3 h2 .eyebrow {
     font: 400 24px/24px var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
 }
 
 .cards.col2 h3,
 .cards.col3 h3 {
     font: 400 24px/1.1 var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
     margin-bottom: 1em;
     color: var(--text-color);
 }
