--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -210,8 +210,10 @@ $semantic-green: #2d9d78;
 :root {
   --monospace-font-family: 'Berkeley Mono', 'JetBrains Mono', 'IBM Plex Mono', 'Fira Code', monospace;
   --monospace-font: var(--monospace-font-family);
-  --body-font-family: 'Source Sans Pro', 'IBM Plex Sans', sans-serif;
-  --display-font-family: 'Source Sans Pro', 'IBM Plex Sans', sans-serif;
+  --body-font-family: Inter, "Source Sans Pro", "IBM Plex Sans", sans-serif;
+  --body-font-settings: "calt", "tnum", "ss01", "ss03";  // For Inter font, see https://rsms.me/inter/#variable
+  --display-font-family: Inter, "Source Sans Pro", "IBM Plex Sans", sans-serif;
+  --display-font-settings: "calt", "tnum", "ss01", "ss03";  // For Inter font, see https://rsms.me/inter/#variable
   --ui-font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   --ui-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 
