--- a/src/_sass/imports/minimal-mistakes-overrides.scss
+++ b/src/_sass/imports/minimal-mistakes-overrides.scss
@@ -8,6 +8,7 @@
   margin-left: 0;
   margin-right: 0;
   font-family: var(--display-font-family);
+  font-feature-settings: var(--display-font-settings);
   font-weight: 900;
   color: var(--blue-800);
   @media (prefers-color-scheme: dark) {
