--- a/src/_sass/imports/minimal-mistakes/_base.scss
+++ b/src/_sass/imports/minimal-mistakes/_base.scss
@@ -13,6 +13,7 @@ body {
   padding: 0;
   color: var(--text-color);
   font-family: var(--body-font-family);
+  font-feature-settings: var(--body-font-settings);
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -30,14 +31,15 @@ h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: var(--display-font-family);
+  font-feature-settings: var(--display-font-settings);
   font-weight: bold;
 }
 
 h1 {
-  margin-top: 0;
+  margin-top: 0.5em;
   font-size: 3rem;
-  line-height: .85;
-  letter-spacing: -.02em;
+  line-height: .95;
+  letter-spacing: -3px;
 }
 
 @include breakpoint($small) {
