--- a/src/_sass/imports/minimal-mistakes/_footer.scss
+++ b/src/_sass/imports/minimal-mistakes/_footer.scss
@@ -39,6 +39,7 @@
 
 .page__footer-copyright {
   font-family: var(--body-font-family);
+  font-feature-settings: var(--body-font-settings);
   font-size: $type-size-7;
 }
 
@@ -57,6 +58,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     font-family: var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
     font-size: 1rem;
     text-transform: uppercase;
   }
