--- a/src/_sass/imports/minimal-mistakes/_notices.scss
+++ b/src/_sass/imports/minimal-mistakes/_notices.scss
@@ -17,6 +17,7 @@
   padding: 1em;
   color: var(--text-color);
   font-family: var(--body-font-family);
+  font-feature-settings: var(--body-font-settings);
   font-size: $type-size-4 !important;
   text-indent: initial; /* override*/
   background-color: mix(#fff, $notice-color, 90%);
