--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -51,6 +51,7 @@
   h6 {
     margin-bottom: 0;
     font-family: var(--display-font-family);
+    font-feature-settings: var(--display-font-settings);
   }
 
   p,
